# comfyui-detail-stitch

./: README.md  __init__.py  nodes.py  pyproject.toml
workflow/: crop with metadata_example.json
